@@ -247,12 +247,6 @@ MSWindowsScreen::enable()
         // watch jump zones
         m_hook.setMode(kHOOK_WATCH_JUMP_ZONE);
     }
-    else {
-        // prevent the system from entering power saving modes.  if
-        // it did we'd be forced to disconnect from the server and
-        // the server would not be able to wake us up.
-        ArchMiscWindows::addBusyState(ArchMiscWindows::kSYSTEM);
-    }
 }
 
 void
@@ -267,11 +261,6 @@ MSWindowsScreen::disable()
 
         // enable special key sequences on win95 family
         enableSpecialKeys(true);
-    }
-    else {
-        // allow the system to enter power saving mode
-        ArchMiscWindows::removeBusyState(ArchMiscWindows::kSYSTEM |
-                            ArchMiscWindows::kDISPLAY);
     }
 
     // tell key state
@@ -1503,18 +1492,12 @@ MSWindowsScreen::onScreensaver(bool activated)
             m_screensaver->checkStarted(SYNERGY_MSG_SCREEN_SAVER, FALSE, 0)) {
             m_screensaverActive = true;
             sendEvent(m_events->forIPrimaryScreen().screensaverActivated());
-
-            // enable display power down
-            ArchMiscWindows::removeBusyState(ArchMiscWindows::kDISPLAY);
         }
     }
     else {
         if (m_screensaverActive) {
             m_screensaverActive = false;
             sendEvent(m_events->forIPrimaryScreen().screensaverDeactivated());
-
-            // disable display power down
-            ArchMiscWindows::addBusyState(ArchMiscWindows::kDISPLAY);
         }
     }
 
